<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_prediksi"
        android:textSize="22sp"
        android:textColor="@color/primary_blue_dark"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <!-- 1. HOURS STUDIED -->
    <EditText
        android:id="@+id/belajarInput"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/hint_belajar"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"/>

    <!-- 2. SLEEP HOURS -->
    <EditText
        android:id="@+id/tidurInput"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/hint_tidur"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/belajarInput"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"/>

    <!-- 3. ATTENDANCE -->
    <EditText
        android:id="@+id/kehadiranInput"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/hint_kehadiran"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/tidurInput"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"/>

    <!-- 4. PREVIOUS SCORES -->
    <EditText
        android:id="@+id/nilaiInput"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:hint="@string/hint_nilai"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        app:layout_constraintTop_toBottomOf="@id/kehadiranInput"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"/>

    <Button
        android:id="@+id/btnPrediksi"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/btn_prediksi"
        android:backgroundTint="@color/primary_blue_dark"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/nilaiInput"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"/>

    <!-- NAVBAR -->
    <include
        layout="@layout/bottom_nav"
        android:id="@+id/bottomNav"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
