<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/title_prediksi"
            android:textColor="@color/primary_blue_dark"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinnerMapel"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/input_bg"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/belajarInput"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/hint_belajar"
            android:background="@drawable/input_bg"
            android:padding="15dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/spinnerMapel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/tidurInput"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/hint_tidur"
            android:background="@drawable/input_bg"
            android:padding="15dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/belajarInput"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/kehadiranInput"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/hint_kehadiran"
            android:background="@drawable/input_bg"
            android:padding="15dp"
            android:inputType="number"
            app:layout_constraintTop_toBottomOf="@id/tidurInput"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"/>

        <EditText
            android:id="@+id/nilaiInput"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/hint_nilai"
            android:background="@drawable/input_bg"
            android:padding="15dp"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/kehadiranInput"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"/>

        <Button
            android:id="@+id/btnPrediksi"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/btn_prediksi"
            android:backgroundTint="@color/primary_blue_dark"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/nilaiInput"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>