<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="20dp"
        android:clipToPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnSimpanResult"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hasil_prediksi"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@color/primary_blue_dark"
                android:layout_margin="20dp" />

            <LinearLayout
                android:id="@+id/cardScore"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:padding="20dp"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/result_card_bg"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:id="@+id/txtScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85.6"
                    android:textSize="42sp"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Perlu Usaha Lebih! Ayo semangat"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/faktorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/analisis_faktor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:id="@+id/faktorContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp">

                <include layout="@layout/item_result" />
                <include layout="@layout/item_result" />
                <include layout="@layout/item_result" />
                <include layout="@layout/item_result" />

            </LinearLayout>

            <TextView
                android:id="@+id/rekTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rekomendasi"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/text_dark"
                android:layout_marginTop="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="10dp" />

            <LinearLayout
                android:id="@+id/listRekomendasi"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnSimpanResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="Simpan ke Riwayat"
        android:backgroundTint="@color/primary_blue_dark"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>